- Added Mature Spore Sac to the loot table of Starving Fungal Giant for the quests The Sporelings' Plight and More Spore Sacs.
- Added Mature Spore Sac to the loot table of Starving Bog Lord for the quests The Sporelings' Plight and More Spore Sacs.
- Updated the flags of Mature Spore Sac to allow all members of a group to loot it.
- Added Discarded Nutriment to the loot table of Bog Lord for the quest A Question of Gluttony.
- Added Discarded Nutriment to the loot table of Fungal Giant for the quest A Question of Gluttony.
- Updated the flags of Discarded Nutriment to allow all members of a group to loot it.
- Added the script for world gameobjects to make the quest Missing Friends trigger for all members of a group.

[2024-04-06]
- Updated the smart script for Avatar of Terokk to give all members of a group the kill credit.

[2024-04-13]
- Added the script for the spell Imbue Crystal to make the quest The Stones of Vekh'nir give the item to all members of a group.

[2024-04-17]
- Added the script for the spell Bloodgem Infusion to make the quest Bloodgem Crystals complete for all members of a group.
- Added the script for Commander Dawnforge to make the quest Information Gathering trigger for all members of a group.
- Updated the respawn time of Mana Bomb Fragment.
- Updated the restock time of Suspicious Outhouse.
- Added Energy Isolation Cube to the loot table of Sunfury Arcanist for the quest Potential Energy Source.
- Updated the flags of Energy Isolation Cube to allow all members of a group to loot it.

[2024-04-19]
- Updated the smart script for Longrunner Proudhoof to give all members of a group credit for the quest We Strike!
- Updated the restock time of Eagle Figurine.
- Updated the restock time of Amani Vase.
- Updated the smart script for "Silvermoon" Harry to give all members of a group the quest item.
- Added the script for Attracted Reef Bull to make the quest The Way to His Heart... trigger for all members of a group.