@@ -684,3 +684,5 @@
 - Updated the restock time of Amani Vase.
 - Updated the smart script for "Silvermoon" Harry to give all members of a group the quest item.
 - Added the script for Attracted Reef Bull to make the quest The Way to His Heart... trigger for all members of a group.
+- Added Steel Gate Artifact to the loot table of Steel Gate Excavator for the quest The Artifacts of Steel Gate.
+- Updated the flags of Steel Gate Artifact to allow all members of a group to loot it.
